removed bad smells and high coverage